--- a/documentation/scenarios/index.html
+++ b/documentation/scenarios/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 3.4.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 3.5.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -97,7 +97,7 @@
 <!--Url:scenarios-->
 <p>This page documents various use cases with a sample implementation using Marten.</p>
 <h2 id="scenarios">Scenarios</h2>
-<ul class="table-of-contents"><li><a href="/marten/documentation/scenarios/aggregates_events_repositories">Aggregates, Events, Repositories</a></li><li><a href="/marten/documentation/scenarios/immutable_projections_readmodel">Immutable projections as read model</a></li></ul>
+<ul class="table-of-contents"><li><a href="/marten/documentation/scenarios/aggregates_events_repositories">Aggregates, Events, Repositories</a></li><li><a href="/marten/documentation/scenarios/copyandtransformstream">Copy and transform stream</a></li><li><a href="/marten/documentation/scenarios/immutable_projections_readmodel">Immutable projections as read model</a></li></ul>
 
 			      	</div>
 
