--- a/documentation/scenarios/aggregates_events_repositories/index.html
+++ b/documentation/scenarios/aggregates_events_repositories/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 3.4.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 3.5.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -47,7 +47,7 @@
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
 		      	<li><a href="/marten/documentation/scenarios" title="Scenarios">Previous</a></li>
-		      	<li><a href="/marten/documentation/scenarios/immutable_projections_readmodel" title="Immutable projections as read model">Next</a></li>
+		      	<li><a href="/marten/documentation/scenarios/copyandtransformstream" title="Copy and transform stream">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -80,7 +80,7 @@
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/scenarios/immutable_projections_readmodel">Immutable projections as read model</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/scenarios/copyandtransformstream">Copy and transform stream</a></p>
 		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/scenarios">Scenarios</a></p>
 
 		        </ul>
@@ -125,7 +125,7 @@
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/scenarios/immutable_projections_readmodel">Immutable projections as read model</a>
+				        	<strong>Next: </strong><a href="/marten/documentation/scenarios/copyandtransformstream">Copy and transform stream</a>
 
 				        </span>
 			      	</nav>
