--- a/documentation/scenarios/index.html
+++ b/documentation/scenarios/index.html
@@ -97,7 +97,7 @@
 <!--Url:scenarios-->
 <p>This page documents various use cases with a sample implementation using Marten.</p>
 <h2 id="scenarios">Scenarios</h2>
-<ul class="table-of-contents"><li><a href="/marten/documentation/scenarios/aggregates_events_repositories">Aggregates, Events, Repositories</a></li><li><a href="/marten/documentation/scenarios/copyandtransformstream">Copy and transform stream</a></li><li><a href="/marten/documentation/scenarios/immutable_projections_readmodel">Immutable projections as read model</a></li></ul>
+<ul class="table-of-contents"><li><a href="/marten/documentation/scenarios/aggregates_events_repositories">Aggregates, Events, Repositories</a></li><li><a href="/marten/documentation/scenarios/copyandtransformstream">Copy and transform stream</a></li><li><a href="/marten/documentation/scenarios/immutable_projections_readmodel">Immutable projections as read model</a></li><li><a href="/marten/documentation/scenarios/usingsequenceforuniqueid">Using sequences for unique and human-readable identifiers</a></li></ul>
 
 			      	</div>
 
