--- a/documentation/documents/advanced/optimistic_concurrency/index.html
+++ b/documentation/documents/advanced/optimistic_concurrency/index.html
@@ -47,7 +47,7 @@
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
 		      	<li><a href="/marten/documentation/documents/advanced/javascript_transformations" title="Javascript Transformations">Previous</a></li>
-		      	<li><a href="/marten/documentation/documents/advanced/extensions" title="Schema Feature Extensions">Next</a></li>
+		      	<li><a href="/marten/documentation/documents/advanced/retrypolicy" title="Retry Policies">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -80,7 +80,7 @@
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/advanced/extensions">Schema Feature Extensions</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/advanced/retrypolicy">Retry Policies</a></p>
 		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/documents/advanced/javascript_transformations">Javascript Transformations</a></p>
 
 		        </ul>
@@ -132,7 +132,7 @@ shown below:</p>
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/documents/advanced/extensions">Schema Feature Extensions</a>
+				        	<strong>Next: </strong><a href="/marten/documentation/documents/advanced/retrypolicy">Retry Policies</a>
 
 				        </span>
 			      	</nav>
