--- a/documentation/scenarios/immutable_projections_readmodel/index.html
+++ b/documentation/scenarios/immutable_projections_readmodel/index.html
@@ -47,7 +47,7 @@
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
 		      	<li><a href="/marten/documentation/scenarios/copyandtransformstream" title="Copy and transform stream">Previous</a></li>
-		      	<li><a href="/marten/documentation/admin" title="Managing PostgreSQL Instance">Next</a></li>
+		      	<li><a href="/marten/documentation/scenarios/usingsequenceforuniqueid" title="Using sequences for unique and human-readable identifiers">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -80,7 +80,7 @@
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/admin">Managing PostgreSQL Instance</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/scenarios/usingsequenceforuniqueid">Using sequences for unique and human-readable identifiers</a></p>
 		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/scenarios/copyandtransformstream">Copy and transform stream</a></p>
 
 		        </ul>
@@ -118,7 +118,7 @@ Given the setup, a stream can now be projected using `AggregateWithPrivateEventA
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/admin">Managing PostgreSQL Instance</a>
+				        	<strong>Next: </strong><a href="/marten/documentation/scenarios/usingsequenceforuniqueid">Using sequences for unique and human-readable identifiers</a>
 
 				        </span>
 			      	</nav>
