--- a/getting_started/index.html
+++ b/getting_started/index.html
@@ -103,6 +103,10 @@ PM> Install-Package Marten
 <pre>
 paket add nuget Marten
 </pre>
+<p>Or, using .Net CLI</p>
+<pre>
+dotnet add package Marten
+</pre>
 <p>The next step is to get access to a PostgreSQL <strong>9.5+</strong> database schema. If you want to let Marten build database schema objects on the fly at development time,
 make sure that your user account has rights to execute <code>CREATE TABLE/FUNCTION</code> statements.</p>
 <p>Marten uses the <a href="http://www.npgsql.org">Npgsql</a> library to access PostgreSQL from .NET, so you'll likely want to read their <a href="http://www.npgsql.org/doc/connection-string-parameters.html">documentation on connection string syntax</a>.</p>
