--- a/documentation/documents/tenancy/configuring/index.html
+++ b/documentation/documents/tenancy/configuring/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="banner">
         <div class="container">
             <div class="navbar-header">
-                <a href="/marten" class="navbar-brand">Marten 3.7.0</a>
+                <a href="/marten" class="navbar-brand">Marten 3.8.0</a>
             </div>
             <nav class="collapse navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav pull-right">
@@ -90,7 +90,7 @@
 <li><code>Conjoined</code>, multi-tenancy through tenant id</li>
 <li><code>Separate</code>, multi-tenancy through separate databases or schemas</li>
 </ul>
-<p>Tenancy can be configured at the store level, applying to all documents or, at most fine-graned level, on individual documents.</p>
+<p>Tenancy can be configured at the store level, applying to all documents or, at the most fine-grained level, on individual documents.</p>
 <h2 id="tenancy-through-policies">Tenancy Through Policies</h2>
 <p>Tenancy can be configured through Document Policies, accesible via <code>StoreOptions.Policies</code>. The following sample demonstrates setting the default tenancy to <code>TenancyStyle.Conjoined</code> for all documents.</p>
 <pre><code class="language-csharp">&#xD;&#xA;storeOptions.Policies.AllDocumentsAreMultiTenanted();&#xD;&#xA;// Shorthand for&#xD;&#xA;// storeOptions.Policies.ForAllDocuments(_ =&gt; _.TenancyStyle = TenancyStyle.Conjoined);&#xD;&#xA;</code></pre>
